--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<html lang="en">
+<!DOCTYPE html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript DOM Crash Course</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Item Lister</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-<header id="main-header" class="bg-success">
+<header id="main-header" class="bg-success text-white p-4 mb-3">
     <div class="container">
       <h1 id="header-title">Item Lister</h1>
     </div> 
@@ -17,9 +17,9 @@
 
       <h2 class="title">Add Items</h2>
 
-      <form>
-        <input type="text">
-        <input type="submit" class="btn" value="Submit">
+      <form class="form-inline mb-3">
+        <input type="text" class="form-control mr-2">
+        <input type="submit" class="btn btn-dark" value="Submit">
       </form>
 
       <h2 class="title">Items</h2>
@@ -34,5 +34,6 @@
     </div> 
   </div> 
     
+  <script src="dom.js"></script>
 </body>
 </html>
