--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li class="list-group-item">item 2</li>
         <li class="list-group-item">item 3</li>
         <li class="list-group-item">item 4</li>
+        <li>Item 5</li> <!-- bg color changed with getElementbyTagName Selector  -->
       </ul>
 
     </div> 
