Button Click Events

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <li class="list-group-item">item 3</li>
         <li class="list-group-item">item 4</li>
       </ul>
-      <span></span>
+      <div id="output"></div>
+      <br>
+      <button onclick="buttonClick()" class="btn btn-dark btn-block" id="button">Click Here</button>
     </div> 
   </div> 
     
