--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       </ul>
       <div id="output"></div>
       <br>
-      <button onclick="buttonClick()" class="btn btn-dark btn-block" id="button">Click Here</button>
+      <button class="btn btn-dark btn-block" id="button">Click Here</button>
+      <br>
+      <!-- gray box -->
+      <div id="box" style="width: 400px; height: 200px; background-color: f4f4f4;"><h2>HELLO</h2></div>
     </div> 
   </div> 
     
