--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
       <form class="form-inline mb-3">
         <input type="text" class="form-control mr-2">
+        <select class="form-control mr-2">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+        </select>
         <input type="submit" class="btn btn-dark" value="Submit">
       </form>
 
