--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
 <body>
 <header id="main-header" class="bg-success text-white p-4 mb-3">
     <div class="container">
-      <h1 id="header-title">Item Lister <span style="display: none;">123</span></h1>
+      <div class="row">
+        <div class="col-md-6">
+          <h1 id="header-title">Item Lister </h1>
+        </div>
+        <div class="col-md-6 align-self-center">
+          <input type="text" class="form-control" id="filter" placeholder="Search Items...">
+        </div>
+      </div>
     </div> 
   </header>
 
@@ -17,33 +24,23 @@
 
       <h2 class="title">Add Items</h2>
 
-      <form class="form-inline mb-3">
-        <input type="text" class="form-control mr-2">
-        <select class="form-control mr-2">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-        </select>
+      <form id="addForm" class="form-inline mb-3">
+        <input id="item" type="text" class="form-control mr-2">
         <input type="submit" class="btn btn-dark" value="Submit">
       </form>
 
       <h2 class="title">Items</h2>
 
       <ul id="items" class="list-group">
-        <li class="list-group-item">item 1</li>
-        <li class="list-group-item">item 2</li>
-        <li class="list-group-item">item 3</li>
-        <li class="list-group-item">item 4</li>
+        <li class="list-group-item">item 1<button class="btn btn-danger btn-sm float-right delete">X</button></li>
+        <li class="list-group-item">item 2<button class="btn btn-danger btn-sm float-right delete">X</button></li>
+        <li class="list-group-item">item 3<button class="btn btn-danger btn-sm float-right delete">X</button></li>
+        <li class="list-group-item">item 4<button class="btn btn-danger btn-sm float-right delete">X</button></li>
       </ul>
-      <div id="output"></div>
-      <br>
       <button class="btn btn-dark btn-block" id="button">Click Here</button>
-      <br>
-      <!-- gray box -->
-      <div id="box" style="width: 400px; height: 200px; background-color: f4f4f4;"><h2>HELLO</h2></div>
     </div> 
   </div> 
     
-  <script src="dom.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
